--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <form class = "login-page">
+        <input type = "text" id="UserName" class="input-field" placeholder="UserName"required>
+        <input type = "text" id="Password" class="input-field" placeholder="Password"required>
+        <button type="submit" class="submit-btn">login</button>
+    </form>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src = "script.js"></script>
 </body>
 </html>
