added some information in body

--- a/Home.html
+++ b/Home.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header></header>
+    <div class = "container1">
+        <div class = "split1">
+        <h1>Music For Everyone</h1>
+        <p>Play millions of songs ad-free today with us</p>
+      </div>
+    <div class = "split1">
+        <h2>Why Premium?</h2>
+        <p>Download Music, Ad-free music, Play most/all of the song available, Ulimited skips </p>
+    </div>
 </body>
 </html>
