--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
     <title>Login</title>
 </head>
 <body>
-    <form class = "login-page">
+    <div class ="login">
+    <form id= "login">
+        <label>User Name</label>
         <input type = "text" id="UserName" class="input-field" placeholder="UserName"required>
+        <br><br>
+        <label>Password</label>
         <input type = "text" id="Password" class="input-field" placeholder="Password"required>
+        <br><br>
         <button type="submit" class="submit-btn">login</button>
     </form>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src = "script.js"></script>
 </body>
