added in nav bar

--- a/RegisterPage.html
+++ b/RegisterPage.html
@@ -13,7 +13,14 @@
 </head>
 
 <body>
-
+  <header>
+    <nav class = "navdesign">
+      <a href="Home.html">Home</a> 
+      <a href="index.html">Login</a> 
+      <a href="RegisterPage.html">Register</a> 
+      <a href="memebership.html">Membership</a> 
+    </nav>
+    </header>
 	<div class="container">
 		<h1>Registration Page</h1>
 		<div id="add-update-msg">
