--- a/Home.html
+++ b/Home.html
@@ -9,7 +9,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav class = "navdesign">
+          <a href="Home.html">Home</a> 
+          <a href="index.html">Login</a> 
+          <a href="RegisterPage.html">Register</a> 
+          <a href="memebership.html">Membership</a> 
+        </nav>
+        </header>
     <div class = "container1">
         <div class = "split1">
         <h1>Music For Everyone</h1>
