--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <title>Login</title>
 </head>
 <body>
+    <header>
+        <nav class = "navdesign">
+          <a href="Home.html">Home</a> 
+          <a href="index.html">Login</a> 
+          <a href="RegisterPage.html">Register</a> 
+          <a href="memebership.html">Membership</a> 
+        </nav>
+        </header>
     <div class ="login">
     <form id= "login">
         <label>User Name</label>
