--- a/index.html
+++ b/index.html
@@ -4,31 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
-    <title>Login</title>
 </head>
 <body>
     <header>
         <nav class = "navdesign">
-          <a href="Home.html">Home</a> 
-          <a href="index.html">Login</a> 
+          <a href="index.html">Home</a> 
+          <a href="login.html">Login</a> 
           <a href="RegisterPage.html">Register</a> 
-          <a href="memebership.html">Membership</a> 
+          <a href="membership.html">Membership</a> 
         </nav>
         </header>
-    <div class ="login">
-    <form id= "login">
-        <label>User Name</label>
-        <input type = "text" id="UserName" class="input-field" placeholder="UserName"required>
-        <br><br>
-        <label>Password</label>
-        <input type = "text" id="Password" class="input-field" placeholder="Password"required>
-        <br><br>
-        <button type="submit" class="submit-btn">login</button>
-    </form>
-</div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src = "script.js"></script>
+    <div class = "container1">
+        <div class = "split1">
+        <h1>Music For Everyone</h1>
+        <p>Play millions of songs ad-free today with us</p>
+      </div>
+    <div class = "split1">
+        <h2>Why Premium?</h2>
+        <p>Download Music, Ad-free music, Play most/all of the song available, Ulimited skips </p>
+    </div>
 </body>
 </html>
