--- a/RegisterPage.html
+++ b/RegisterPage.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Assignment 2</title>
+	<title>Registration</title>
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
 	 crossorigin="anonymous">
@@ -15,10 +15,10 @@
 <body>
   <header>
     <nav class = "navdesign">
-      <a href="Home.html">Home</a> 
-      <a href="index.html">Login</a> 
+      <a href="index.html">Home</a> 
+      <a href="login.html">Login</a> 
       <a href="RegisterPage.html">Register</a> 
-      <a href="memebership.html">Membership</a> 
+      <a href="membership.html">Membership</a> 
     </nav>
     </header>
 	<div class="container">
