--- a/membership.html
+++ b/membership.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Membership</title>
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class = "navdesign">
+          <a href="index.html">Home</a> 
+          <a href="login.html">Login</a> 
+          <a href="RegisterPage.html">Register</a> 
+          <a href="membership.html">Membership</a> 
+        </nav>
+        </header>
 </body>
 </html>
