--- a/login.html
+++ b/login.html
@@ -11,10 +11,10 @@
 <body>
     <header>
         <nav class = "navdesign">
-          <a href="Home.html">Home</a> 
-          <a href="index.html">Login</a> 
+          <a href="index.html">Home</a> 
+          <a href="login.html">Login</a> 
           <a href="RegisterPage.html">Register</a> 
-          <a href="memebership.html">Membership</a> 
+          <a href="membership.html">Membership</a> 
         </nav>
         </header>
     <div class ="login">
