added in content

--- a/index.html
+++ b/index.html
@@ -26,5 +26,29 @@
         <h2>Why Premium?</h2>
         <p>Download Music, Ad-free music, Play most/all of the song available, Ulimited skips </p>
     </div>
+    <div class="row">
+        <div class="column">
+        <h2>Individual S$9.90/month after offer period 1 account</h2>
+        <p>Ad-free music listening</p>
+        <p>Play anywhere - even offline</p>
+        <p>On-demand playback </p>
+    </div>
+        <div class="column">
+        <h2>Duo S$12.98/month after offer period 2 accounts</h2>
+        <p>2 Premium accounts for a couple under one roof</p>
+        <p>Ad-free music listening, play offline, on-demand playback</p>
+    </div>
+        <div class="column">
+        <h2>Family S$16.98/month after offer period</h2>
+        <p>6 Premium accounts for family members living under one roof</p>
+        <p>Block explicit music</p>
+        <p>Ad-free music listening, play offline, on-demand playback</p>
+    </div>
+        <div class="column">
+        <h2>Student S$4.99/month after offer period 1 account</h2>
+        <p>Special discount for eligible students in university</p>
+        <p>Ad-free music listening, play offline, on-demand playback</p>
+      </div>
+    </div>
 </body>
 </html>
