remove login and register page

--- a/login.html
+++ b/login.html
@@ -12,8 +12,6 @@
     <header>
         <nav class = "navdesign">
           <a href="index.html">Home</a> 
-          <a href="login.html">Login</a> 
-          <a href="RegisterPage.html">Register</a> 
           <a href="membership.html">Membership</a> 
         </nav>
         </header>
@@ -23,7 +21,7 @@
         <input type = "text" id="UserName" class="input-field" placeholder="UserName"required>
         <br><br>
         <label>Password</label>
-        <input type = "text" id="Password" class="input-field" placeholder="Password"required>
+        <input type = "password" id="Password" class="input-field" placeholder="Password"required>
         <br><br>
         <button type="submit" class="submit-btn">login</button>
     </form>
