added in button for register

--- a/login.html
+++ b/login.html
@@ -24,6 +24,8 @@
         <input type = "password" id="Password" class="input-field" placeholder="Password"required>
         <br><br>
         <button type="submit" class="submit-btn">login</button>
+        <br><br>
+        <button type="submit" class="submit-btn">Not a User Register now.</button>
     </form>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
