updated nav bar

--- a/membership.html
+++ b/membership.html
@@ -12,9 +12,7 @@
     <header>
         <nav class = "navdesign">
           <a href="index.html">Home</a> 
-          <a href="login.html">Login</a> 
-          <a href="RegisterPage.html">Register</a> 
-          <a href="membership.html">Membership</a> 
+          <a href="index.html">Log Out</a> 
         </nav>
         </header>
 </body>
