updated register button position

--- a/login.html
+++ b/login.html
@@ -25,8 +25,8 @@
         <br><br>
         <button type="submit" class="submit-btn">login</button>
         <br><br>
-        <button type="submit" class="submit-btn">Not a User Register now.</button>
     </form>
+    <a href= "RegisterPage.html"><button>Register Now</button></a
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src = "script.js"></script>
