added in content

--- a/membership.html
+++ b/membership.html
@@ -12,8 +12,18 @@
     <header>
         <nav class = "navdesign">
           <a href="index.html">Home</a> 
-          <a href="index.html">Log Out</a> 
         </nav>
         </header>
+        <form id= "purchase">
+          <label>Address</label>
+          <input type = "text" id="address" class="input-field" placeholder="Address"required>
+          <br><br>
+          <label>Postal code</label>
+          <input type = "text" id="postalcode" class="input-field" placeholder="Postal Code"required>
+          <label>Credit/Debit Card</label>
+          <input type = "text" id="card" class="input-field" placeholder="Credit/Debit Card"required>
+          <br><br>
+          <a href= "#"><button>Buy Me</button></a>
+      </form>
 </body>
 </html>
