--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
           <a href="index.html">Home</a> 
           <a href="contact.html">Contact Us</a> 
         </nav>
+        <nav class = "navdesign1">
+            <a href="login.html">Login in</a> 
+            <a href="RegisterPage.html">Register</a> 
+          </nav>
         </header>
     <div class = "container1">
         <div class = "split1">
