--- a/home2.html
+++ b/home2.html
@@ -7,14 +7,15 @@
     <title>Home</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <nav class = "navdesign">
-          <a href="index.html">Home</a> 
-          <a href="contact.html">Contact Us</a> 
-          <a href="profile.html">Profile</a> 
-        </nav>
+            <a href="index.html">Home</a> 
+            <a href="contact.html">Contact Us</a> 
+            <a href="profile.html">Profile</a> 
+          </nav>
         </header>
     <div class = "container1">
         <div class = "split1">
@@ -25,29 +26,58 @@
         <h2>Why Premium?</h2>
         <p>Download Music, Ad-free music, Play most/all of the song available, Ulimited skips </p>
     </div>
-    <div class="row">
-        <div class="column">
-        <h2>Individual S$9.90/month after offer period 1 account</h2>
-        <p>Ad-free music listening</p>
-        <p>Play anywhere - even offline</p>
-        <p>On-demand playback </p>
-    </div>
-        <div class="column">
-        <h2>Duo S$12.98/month after offer period 2 accounts</h2>
-        <p>2 Premium accounts for a couple under one roof</p>
-        <p>Ad-free music listening, play offline, on-demand playback</p>
-    </div>
-        <div class="column">
-        <h2>Family S$16.98/month after offer period</h2>
-        <p>6 Premium accounts for family members living under one roof</p>
-        <p>Block explicit music</p>
-        <p>Ad-free music listening, play offline, on-demand playback</p>
-    </div>
-        <div class="column">
-        <h2>Student S$4.99/month after offer period 1 account</h2>
-        <p>Special discount for eligible students in university</p>
-        <p>Ad-free music listening, play offline, on-demand playback</p>
-      </div>
-    </div>
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Individual</h5>
+          <p class="card-text">$9.99/month 1 account</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Ad-free music listening</li>
+          <li class="list-group-item">Play anywhere - even offline</li>
+          <li class="list-group-item">On-demand playback</li>
+        </ul>
+        <div class="card-body">
+         <a href= "membership.html"><button>Buy Me</button></a>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Duo</h5>
+              <p class="card-text">$12.99/month 2 accounts</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">2 Premium accounts for a couple under one roof</li>
+              <li class="list-group-item">Ad-free music listening, play offline, on-demand playback</li>
+            </ul>
+            <div class="card-body">
+             <a href= "membership.html"><button>Buy Me</button></a>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">Family</h5>
+                  <p class="card-text">$15.99/month 6 accounts</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">6 Premium accounts for family members living under one roof</li>
+                  <li class="list-group-item">Block explicit music</li>
+                  <li class="list-group-item">Ad-free music listening, play offline, on-demand playback</li>
+                  <li class="list-group-item">Spotify Kids: a separate app made just for kids</li>
+                </ul>
+                <div class="card-body">
+                 <a href= "membership.html"><button>Buy Me</button></a>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Student</h5>
+                      <p class="card-text">$4.99/month 1 account</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Ad-free music listening, play offline, on-demand playback</li>
+                    </ul>
+                    <div class="card-body">
+                     <a href= "membership.html"><button>Buy Me</button></a>
+                    </div>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
