added in plan detail for each memebership

--- a/membership-3.html
+++ b/membership-3.html
@@ -17,8 +17,8 @@
         </header>
         <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Individual</h5>
-            <p class="card-text">$9.99/month 1 account</p>
+            <h5 class="card-title">Family</h5>
+                  <p class="card-text">$15.99/month 6 accounts</p>
           </div>
           </div>
         <form id= "purchase">
