--- a/membership-4.html
+++ b/membership-4.html
@@ -17,8 +17,8 @@
         </header>
         <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Individual</h5>
-            <p class="card-text">$9.99/month 1 account</p>
+            <h5 class="card-title">Student</h5>
+            <p class="card-text">$4.99/month 1 account</p>
           </div>
           </div>
         <form id= "purchase">
