--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class = "navdesign">
+          <a href="index.html">Home</a> 
+          <a href="contact.html">Contact Us</a> 
+        </nav>
+        <nav class = "navdesign1">
+            <a href="login.html">Login in</a> 
+            <a href="RegisterPage.html">Register</a> 
+          </nav>
+        </header>
+        <p>Click on the Email Button and i will get in touch with you soon.</p>
+    <button class ="button1" onclick="sendEmail(),myFunction3()">Email me!</button>
+    <p id="demo"></p>
+    <script src = "script.js"></script>
 </body>
 </html>
