updated nav bar position

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
         <nav class = "navdesign">
           <a href="index.html">Home</a> 
           <a href="contact.html">Contact Us</a> 
-        </nav>
-        <nav class = "navdesign1">
-            <a href="login.html">Login in</a> 
-            <a href="RegisterPage.html">Register</a> 
+          <a style="float:right" href="RegisterPage.html">Register</a> 
+          <a style="float:right" href="login.html">Login in</a>
           </nav>
         </header>
     <div class = "container1">
