--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,9 @@
     <header>
         <nav class = "navdesign">
           <a href="index.html">Home</a> 
-          <a href="contact.html">Contact Us</a> 
-        </nav>
-        <nav class = "navdesign1">
-            <a href="login.html">Login in</a> 
-            <a href="RegisterPage.html">Register</a> 
+          <a href="contact.html">Contact Us</a>        
+          <a style="float:right" href="login.html">Login in</a> 
+          <a style="float:right" href="RegisterPage.html">Register</a> 
           </nav>
         </header>
         <p>Click on the Email Button and i will get in touch with you soon.</p>
