Added Membership Stuff

--- a/login.html
+++ b/login.html
@@ -16,18 +16,18 @@
         </nav>
         </header>
     <div class ="login">
-    <form id= "login">
-        <label>User Name</label>
-        <input type = "text" id="UserName" class="input-field" placeholder="UserName"required>
-        <br><br>
-        <label>Password</label>
-        <input type = "password" id="Password" class="input-field" placeholder="Password"required>
-        <br><br>
-        <button type="submit" class="submit-btn">login</button>
-        <br><br>
-    </form>
-    <a href= "RegisterPage.html"><button>Register Now</button></a
-</div>
+        <form id= "login">
+            <label>User Name</label>
+            <input type = "text" id="UserName" class="input-field" placeholder="UserName"required>
+            <br><br>
+            <label>Password</label>
+            <input type = "password" id="Password" class="input-field" placeholder="Password"required>
+            <br><br>
+            <button type="submit" class="submit-btn">login</button>
+            <br><br>
+        </form>
+        <a href= "RegisterPage.html"><button>Register Now</button></a>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src = "script.js"></script>
 </body>
