--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a href="index.html">Home</a> 
           <a href="contact.html">Contact Us</a> 
           <a style="float:right" href="RegisterPage.html">Register</a> 
-          <a style="float:right" href="login.html">Login in</a>
+          <a style="float:right" href="login.html">Login</a>
           </nav>
         </header>
     <div class = "container1">
