Added Profile Page Added Able to update profile Added Data base for form for buying membership

--- a/membership-4.html
+++ b/membership-4.html
@@ -30,8 +30,9 @@
           <label>Credit/Debit Card</label>
           <input type = "text" id="card" class="input-field" placeholder="Credit/Debit Card"required>
           <br><br>
-          <a href= "#">
-          <button id="Buy-Me">Buy Me</button></a>
+          <input id="Buy-Me" type="submit" value="Buy Me">
+          <input type = "hidden" id = "update-contact-id">
+          <input type="hidden" value="Student" id="MembershipType">
       </form>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
