--- a/membership.html
+++ b/membership.html
@@ -31,6 +31,7 @@
           <input type = "text" id="card" class="input-field" placeholder="Credit/Debit Card"required>
           <br><br>
           <input id="Buy-Me" type="submit" value="Buy Me">
+          <input type="hidden" value="Individual" id="MembershipType">
           <input type = "hidden" id = "update-contact-id">
       </form>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
