--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,13 @@
           <a style="float:right" href="login.html">Login</a> 
           </nav>
         </header>
-        <p>Click on the Email Button and i will get in touch with you soon.</p>
+        <h1 id="ch1">For more information</h1>
+        <p id="p1">If you need help in getting the plan or require more help</p>
+        <p id="p1">Click on the Email Button and i will get in touch with you soon.</p>
+        <div class="container2">
     <button class ="button1" onclick="sendEmail(),myFunction3()">Email me!</button>
+</div>
+<br>
     <p id="demo"></p>
     <script src = "script.js"></script>
 </body>
