updated nav bar and added in lottie animation

--- a/login.html
+++ b/login.html
@@ -11,8 +11,7 @@
 <body>
     <header>
         <nav class = "navdesign">
-          <a href="index.html">Home</a> 
-          <a href="membership.html">Membership</a> 
+          <a href="index.html">Home</a>  
         </nav>
         </header>
     <div class ="login">
@@ -23,11 +22,15 @@
             <label>Password</label>
             <input type = "password" id="Password" class="input-field" placeholder="Password"required>
             <br><br>
-            <button type="submit" class="submit-btn">login</button>
+            <button type="submit" class="submit-btn">Login</button>
             <br><br>
         </form>
-        <a href= "RegisterPage.html"><button>Register Now</button></a>
+        <a href= "RegisterPage.html"><button class ="r-btn">Register Now</button></a>
     </div>
+    <div id="loading">
+        <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_szlepvdh.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+    </div>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src = "script.js"></script>
 </body>
