updated nav bar

--- a/RegisterPage.html
+++ b/RegisterPage.html
@@ -16,9 +16,7 @@
   <header>
     <nav class = "navdesign">
       <a href="index.html">Home</a> 
-      <a href="login.html">Login</a> 
-      <a href="RegisterPage.html">Register</a> 
-      <a href="membership.html">Membership</a> 
+      <a style="float:right" href="login.html">Login</a>  
     </nav>
     </header>
 	<div class="container">
