updated nav bar

--- a/profile.html
+++ b/profile.html
@@ -11,6 +11,14 @@
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    <header>
+        <nav class = "navdesign">
+            <a href="home2.html">Home</a> 
+            <a href="contact.html">Contact Us</a> 
+            <a style="float:right"href="index.html">log out</a> 
+            <a style="float:right"href="profile.html">Profile</a> 
+          </nav>
+        </header>
     <div class="form" id="update-contact">
         <form id="update-form">
             <div class="form-group">
