updated nav bar and added class for label for css

--- a/membership.html
+++ b/membership.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class = "navdesign">
-          <a href="index.html">Home</a> 
+          <a href="home2.html">Home</a> 
         </nav>
         </header>
         <div class="card" style="width: 18rem;">
@@ -21,13 +21,14 @@
             <p class="card-text">$9.99/month 1 account</p>
           </div>
           </div>
+          <br><br>
         <form id= "purchase">
-          <label>Address</label>
+          <label class = "label1">Address</label>
           <input type = "text" id="address" class="input-field" placeholder="Address"required>
           <br><br>
-          <label>Postal code</label>
+          <label class = "label1">Postal code</label>
           <input type = "text" id="postalcode" class="input-field" placeholder="Postal Code"required>
-          <label>Credit/Debit Card</label>
+          <label class = "label1">Credit/Debit Card</label>
           <input type = "text" id="card" class="input-field" placeholder="Credit/Debit Card"required>
           <br><br>
           <input id="Buy-Me" type="submit" value="Buy Me">
