--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     <div class = "split1">
         <h2>Why Premium?</h2>
-        <p>Download Music, Ad-free music, Play most/all of the song available, Ulimited skips </p>
+        <p>Download Music, Ad-free music, Play most/all of the song available, Unlimited skips </p>
     </div>
     <div class ="c-con">
       <div class="card-group">
