added in font from google

--- a/home2.html
+++ b/home2.html
@@ -8,25 +8,50 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Roboto:wght@100&display=swap" rel="stylesheet">  
   </head>
   <body>
     <header>
       <nav class = "navdesign">
         <a href="home2.html">Home</a> 
         <a href="contact.html">Contact Us</a> 
-        <a style="float:right"href="index.html">log out</a> 
+        <a style="float:right"href="index.html">Log Out</a> 
         <a style="float:right"href="profile.html">Profile</a> 
       </nav>
-    </header>
-    <div class = "container1">
-    <div class = "split1">
-      <h1>Music For Everyone</h1>
-      <p>Play millions of songs ad-free today with us</p>
-    </div>
-    <div class = "split1">
-      <h2>Why Premium?</h2>
-      <p>Download Music, Ad-free music, Play most/all of the song available, Unlimited skips </p>
-    </div>
+      <div class = "container1">
+        <div class = "split1">
+          <h1>Music For Everyone</h1>
+          <p>Play millions of songs ad-free today with us</p>
+        </div>
+        <br><br>
+        <div class="pic-con">
+        <div class = "split2">
+          <h1>Why Premium?</h1>
+        </div>
+        <div class="picrow">
+          <div class="piccolumn">
+            <img src="1.png" alt="Snow" style="width:100%">
+            <h3>Download music.</h3>
+            <p>Listen anywhere.</p>
+          </div>
+          <div class="piccolumn">
+            <img src="2.png" alt="Forest" style="width:100%">
+            <h3>Ad-free music listening.</h3>
+            <p>Enjoy nonstop music.</p>
+          </div>
+          <div class="piccolumn">
+            <img src="3.png" alt="Mountains" style="width:100%">
+            <h3>Play any song.</h3>
+            <p>Even on mobile.</p>
+          </div>
+          <div class="piccolumn">
+            <img src="4.png" alt="Mountains" style="width:100%">
+            <h3>Unlimited skips.</h3>
+            <p>Just hit next.</p>
+          </div>
+        </div>
+        </div>
     <div class ="c-con">
       <div class="card-group">
         <div class="card" style="width: 18rem;">
