--- a/membership.html
+++ b/membership.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Roboto:wght@100&display=swap" rel="stylesheet">  
 </head>
 <body>
     <header>
@@ -24,12 +26,12 @@
           <br><br>
         <form id= "purchase">
           <label class = "label1">Address</label>
-          <input type = "text" id="address" class="input-field" placeholder="Address"required>
+          <input type = "text" id="address" class="input-field1" placeholder="Address"required>
           <br><br>
           <label class = "label1">Postal code</label>
-          <input type = "text" id="postalcode" class="input-field" placeholder="Postal Code"required>
+          <input type = "text" id="postalcode" class="input-field1" placeholder="Postal Code"required>
           <label class = "label1">Credit/Debit Card</label>
-          <input type = "text" id="card" class="input-field" placeholder="Credit/Debit Card"required>
+          <input type = "text" id="card" class="input-field1" placeholder="Credit/Debit Card"required>
           <br><br>
           <input id="Buy-Me" type="submit" value="Buy Me">
           <input type="hidden" value="Individual" id="MembershipType">
