--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,8 @@
 	 crossorigin="anonymous">
     <link rel="stylesheet" href="normalize.css">
 	<link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Roboto:wght@100&display=swap" rel="stylesheet">  
 </head>
 <body>
     <header>
@@ -20,6 +22,8 @@
           </nav>
         </header>
     <div class="form" id="update-contact">
+        <h1 class="profile-h2">Profile Page</h1>
+        <div class="profile-con">
         <form id="update-form">
             <div class="form-group">
                 <label for="xName">Name</label>
@@ -56,6 +60,7 @@
             <input type ="button" value="Update" class="btn btn-primary" id="unlock-update">    
             <input type="submit" value="Submit" class="btn btn-primary" id="update-submit">
         </form>
+    </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
