--- a/RegisterPage.html
+++ b/RegisterPage.html
@@ -10,6 +10,8 @@
 	 crossorigin="anonymous">
    <link rel="stylesheet" href="normalize.css">
 	<link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Roboto:wght@100&display=swap" rel="stylesheet">  
 </head>
 
 <body>
@@ -38,59 +40,14 @@
           </div>
           <div class="form-group">
             <label for="xPassword">Password</label>
-            <input type="text" id="xPassword" class="form-control" required>
+            <input type="password" id="xPassword" class="form-control" required>
           </div>
-          <input type="submit" value="Send" class="btn btn-primary" id="contact-submit">
+          <input type="submit" value="Register" class="btn btn-primary" id="contact-submit">
       </form>
     </div>
   </div><!-- end add container --> 
 
-  <div class="container mt-5">
-    <h2>Table information of Contacts (<span id="total-contacts"></span>)</h2>
-    <table class="table" id="contact-list">
-      <thead>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Password</th>
-        <th>MemberStatus</th>
-        <th colspan="2">Actions</th>
-        
-      </thead>
-      <!-- This will be filled with information later -->
-      <tbody></tbody>
-    </table>
-  </div>
   
-  <div class="container mt-5" id="update-contact-container"> 
-    <div id="add-update-msg">
-			<div class="alert alert-success" role="alert">
-				Contact record updated sucessfully
-			</div>
-		</div>
-    <h4>Update Contact</h4>
-    <div class="form" id="update-contact">
-			<form id="update-contact-form">
-				<div class="form-group">
-					<label for="update-xName">Name</label>
-          <input type="text" id="update-xName" class="form-control" required>
-        </div>
-        <div class="form-group">
-          <label for="update-xEmail">Email</label>
-          <input type="text" id="update-xEmail" class="form-control" required>
-        </div>
-        <div class="form-group">
-          <label for="update-xPassword">Password</label>
-          <input type = "text" id="update-xPassword" class="form-control" required>
-        </div>
-        <div class="form-group">
-          <label for="update-xMemberPlan">Member Status</label>
-          <input type = "booleen" id="update-xMemberPlan" class="form-control" required>
-        </div>
-        <input type = "hidden" id = "update-contact-id">
-          <input type="submit" value="Update Contact Details" class="btn btn-warning" id="update-contact-submit">
-      </form>
-    </div>
-  </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
