--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
     <title>Contact</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Roboto:wght@100&display=swap" rel="stylesheet">  
 </head>
 <body>
     <header>
