updated btn text

--- a/home2.html
+++ b/home2.html
@@ -65,7 +65,7 @@
             </ul>
           </div>
           <div class="card-body c-btn">
-            <a href= "membership.html"><button class ="submit-btn">Buy Me</button></a>
+            <a href= "membership.html"><button class ="submit-btn">Subscribe</button></a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -78,7 +78,7 @@
             </ul>
           </div>
           <div class="card-body c-btn">
-            <a href= "membership-2.html"><button class ="submit-btn">Buy Me</button></a>
+            <a href= "membership-2.html"><button class ="submit-btn">Subscribe</button></a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -93,7 +93,7 @@
             </ul>
           </div>
           <div class="card-body c-btn">
-            <a href= "membership-3.html"><button class ="submit-btn">Buy Me</button></a>
+            <a href= "membership-3.html"><button class ="submit-btn">Subscribe</button></a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -105,7 +105,7 @@
             </ul>
           </div>
           <div class="card-body c-btn">
-            <a href= "membership-4.html"><button class ="submit-btn">Buy Me</button></a>
+            <a href= "membership-4.html"><button class ="submit-btn">Subscribe</button></a>
           </div>
         </div>
       </div>
