--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </ul>
         </div>
         <div class="card-body c-btn">
-          <a href= "login.html"><button class ="submit-btn">Buy Me</button></a>
+          <a href= "login.html"><button class ="submit-btn">Subscribe</button></a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
@@ -79,7 +79,7 @@
           </ul>
         </div>
         <div class="card-body c-btn">
-          <a href= "login.html"><button class ="submit-btn">Buy Me</button></a>
+          <a href= "login.html"><button class ="submit-btn">Subscribe</button></a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
@@ -94,7 +94,7 @@
           </ul>
         </div>
         <div class="card-body c-btn">
-          <a href= "login.html"><button class ="submit-btn">Buy Me</button></a>
+          <a href= "login.html"><button class ="submit-btn">Subscribe</button></a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
@@ -106,7 +106,7 @@
           </ul>
         </div>
         <div class="card-body c-btn">
-          <a href= "login.html"><button class ="submit-btn">Buy Me</button></a>
+          <a href= "login.html"><button class ="submit-btn">Subscribe</button></a>
         </div>
       </div>
     </div>
