updated path for css & js

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Roboto:wght@100&display=swap" rel="stylesheet">  
@@ -32,22 +32,22 @@
     </div>
     <div class="picrow">
       <div class="piccolumn">
-        <img src="1.png" alt="Snow" style="width:100%">
+        <img src="Image/music-icon-1.png" alt="Snow" style="width:100%">
         <h3>Download music.</h3>
         <p>Listen anywhere.</p>
       </div>
       <div class="piccolumn">
-        <img src="2.png" alt="Forest" style="width:100%">
+        <img src="Image/music-icon-2.png" alt="Forest" style="width:100%">
         <h3>Ad-free music listening.</h3>
         <p>Enjoy nonstop music.</p>
       </div>
       <div class="piccolumn">
-        <img src="3.png" alt="Mountains" style="width:100%">
+        <img src="Image/music-icon-3.png" alt="Mountains" style="width:100%">
         <h3>Play any song.</h3>
         <p>Even on mobile.</p>
       </div>
       <div class="piccolumn">
-        <img src="4.png" alt="Mountains" style="width:100%">
+        <img src="Image/music-icon-4.png" alt="Mountains" style="width:100%">
         <h3>Unlimited skips.</h3>
         <p>Just hit next.</p>
       </div>
@@ -117,6 +117,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="script.js">	</script>
+    <script src="Javascript/script.js">	</script>
   </body>
 </html>
