--- a/RegisterPage.html
+++ b/RegisterPage.html
@@ -8,8 +8,8 @@
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
 	 crossorigin="anonymous">
-   <link rel="stylesheet" href="normalize.css">
-	<link href="style.css" rel="stylesheet" type="text/css" />
+   <link rel="stylesheet" href="CSS/normalize.css">
+	<link href="CSS/style.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Roboto:wght@100&display=swap" rel="stylesheet">  
 </head>
