--- a/membership-4.html
+++ b/membership-4.html
@@ -17,25 +17,28 @@
           <a href="home2.html">Home</a> 
         </nav>
         </header>
-        <div class="card" style="width: 18rem;">
+        <div class="m-con">
+          <div class="col-6" style="display: flex; align-items: center;">
+        <div class="card c1">
           <div class="card-body">
             <h5 class="card-title">Student</h5>
             <p class="card-text">$4.99/month 1 account</p>
           </div>
           </div>
-          <br><br>
-        <form id= "purchase">
+          </div>
+        <form id= "purchase" class="col-6">
           <label class = "label1">Address</label>
-          <input type = "text" id="address" class="input-field" placeholder="Address"required>
+          <input type = "text" id="address" class="input-field1" placeholder="Address"required>
           <label class = "label1">Postal code</label>
-          <input type = "text" id="postalcode" class="input-field" placeholder="Postal Code"required>
+          <input type = "text" id="postalcode" class="input-field1" placeholder="Postal Code"required>
           <label class = "label1">Credit/Debit Card</label>
-          <input type = "text" id="card" class="input-field" placeholder="Credit/Debit Card"required>
+          <input type = "text" id="card" class="input-field1" placeholder="Credit/Debit Card"required>
           <br><br>
-          <input id="Buy-Me" type="submit" value="Buy Me">
+          <input id="Buy-Me" type="submit" value="Purchase">
           <input type = "hidden" id = "update-contact-id">
           <input type="hidden" value="Student" id="MembershipType">
       </form>
+        </div>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
