--- a/membership-3.html
+++ b/membership-3.html
@@ -18,15 +18,21 @@
         </nav>
         </header>
         <div class="m-con">
-          <div class="col-6" style="display: flex; align-items: center;">
+          <div class="col-lg-6" style="display: flex; align-items: center;">
         <div class="card c1">
           <div class="card-body">
             <h5 class="card-title">Family</h5>
-                  <p class="card-text">$15.99/month 6 accounts</p>
+              <p class="card-text">$15.99/month 6 accounts</p>
+              <ul>
+                <li >6 Premium accounts for family members living under one roof</li>
+                <li >Block explicit music</li>
+                <li >Ad-free music listening, play offline, on-demand playback</li>
+                <li>Spotify Kids: a separate app made just for kids</li>
+              </ul>
           </div>
           </div>
           </div>
-        <form id= "purchase" class="col-6">
+        <form id= "purchase" class="col-lg-6">
           <label class = "label1">Address</label>
           <input type = "text" id="address" class="input-field1" placeholder="Address"required>
           <label class = "label1">Postal code</label>
