--- a/membership-4.html
+++ b/membership-4.html
@@ -18,15 +18,18 @@
         </nav>
         </header>
         <div class="m-con">
-          <div class="col-6" style="display: flex; align-items: center;">
+          <div class="col-lg-6" style="display: flex; align-items: center;">
         <div class="card c1">
           <div class="card-body">
             <h5 class="card-title">Student</h5>
             <p class="card-text">$4.99/month 1 account</p>
+            <ul>
+              <li>Ad-free music listening, play offline, on-demand playback</li>
+            </ul>
           </div>
           </div>
           </div>
-        <form id= "purchase" class="col-6">
+        <form id= "purchase" class="col-lg-6">
           <label class = "label1">Address</label>
           <input type = "text" id="address" class="input-field1" placeholder="Address"required>
           <label class = "label1">Postal code</label>
