--- a/profile.html
+++ b/profile.html
@@ -16,9 +16,8 @@
     <header>
         <nav class = "navdesign">
             <a href="home2.html">Home</a> 
-            <a href="contact.html">Contact Us</a> 
-            <a style="float:right"href="index.html">log out</a> 
-            <a style="float:right"href="profile.html">Profile</a> 
+            <a href="contact2.html">Contact Us</a> 
+            <a style="float:right"href="index.html">Log Out</a>  
           </nav>
         </header>
     <div class="form" id="update-contact">
