--- a/RegisterPage.html
+++ b/RegisterPage.html
@@ -11,7 +11,7 @@
    <link rel="stylesheet" href="CSS/normalize.css">
 	<link href="CSS/style.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Roboto:wght@100&display=swap" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Roboto:wght@100&display=swap" rel="stylesheet">  
 </head>
 
 <body>
@@ -21,6 +21,7 @@
       <a style="float:right" href="login.html">Login</a>  
     </nav>
     </header>
+    <div class="r-con">
 	<div class="container">
 		<h1>Registration Page</h1>
 		</div>
@@ -47,6 +48,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-<script src="script.js"></script>
+<script src="Javascript/script.js"></script>
   </body>
 </html>
