--- a/home2.html
+++ b/home2.html
@@ -16,9 +16,10 @@
       <nav class = "navdesign">
         <a href="home2.html">Home</a> 
         <a href="contact2.html">Contact Us</a> 
-        <a style="float:right"href="index.html">Log Out</a> 
-        <a style="float:right"href="profile.html">Profile</a> 
+        <a style="float:right" href="index.html">Log Out</a> 
+        <a style="float:right" href="profile.html">Profile</a> 
       </nav>
+      </header>
       <div class = "container1">
         <div class = "split1">
           <h1>Music For Everyone</h1>
@@ -109,6 +110,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
