--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
         </div>
       </div>
     </div>
+    </div>
+    </div>
     <div id="loading">
       <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_1pxqjqps.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
     </div>
